--- a/IgoUgo/package.json
+++ b/IgoUgo/package.json
@@ -17,6 +17,7 @@
         "vue": "^3.5.13"
     },
     "dependencies": {
+        "swiper": "^11.1.15",
         "vue-loader": "^17.4.2",
         "vue-router": "^4.5.0",
         "vuex": "^4.0.2"
