250123 이경진 소셜 로그인 시작

--- a/IgoUgo/.env.example
+++ b/IgoUgo/.env.example
@@ -60,3 +60,8 @@ TOKEN_EXP_ACCESS=
 TOKEN_EXP_REFRESH=
 TOKEN_SECRET_KEY=
 TOKEN_SALT_LENGTH=
+
+## 소셜로그인 관련 설정 ##
+KAKAO_CLIENT_ID=
+KAKAO_CLIENT_SECRET=
+KAKAO_REDIRECT_URI=
