250124 이경진 소셜로그인 거의 완성

--- a/IgoUgo/.env.example
+++ b/IgoUgo/.env.example
@@ -62,6 +62,6 @@ TOKEN_SECRET_KEY=
 TOKEN_SALT_LENGTH=
 
 ## 소셜로그인 관련 설정 ##
-KAKAO_CLIENT_ID=
-KAKAO_CLIENT_SECRET=
-KAKAO_REDIRECT_URI=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URI=
