--- a/IgoUgo/package.json
+++ b/IgoUgo/package.json
@@ -17,7 +17,9 @@
         "vue": "^3.5.13"
     },
     "dependencies": {
+        "chart.js": "^4.4.7",
         "swiper": "^11.1.15",
+        "vue-chartjs": "^5.3.2",
         "vue-loader": "^17.4.2",
         "vue-router": "^4.5.0",
         "vuex": "^4.0.2"
